Anpassung in Verkaufview - redunanz weg